# autocomplete-e-autocorrect

./: .gitignore  CMakeLists.txt  README.md
assets/: run.sh
data/: a.txt  palavrasOrdAlf.txt  ptbrcorpus.txt  script.py  teste.txt  teste_caractere.txt  teste_negativo.txt  wikitionary.txt
data/testes/: teste_caractere.txt  teste_negativo.txt  teste_peso_vazio.txt  teste_vazio.txt
include/: AutoComplete.hpp  AutoCorrect.hpp  Dados.hpp  Interface.hpp
src/: AutoComplete.cpp  AutoCorrect.cpp  Dados.cpp  Interface.cpp  main.cpp
